<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/porqueBtn"
        android:layout_width="309dp"
        android:layout_height="84dp"
        android:backgroundTint="@color/verdePastel"
        android:fontFamily="@font/verdana"
        android:text="@string/Porque"
        android:textAlignment="center"
        android:textColor="@color/verdeOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/vamosBtn"
        android:layout_width="309dp"
        android:layout_height="84dp"
        android:backgroundTint="@color/verdePastel"
        android:fontFamily="@font/verdana"
        android:text="@string/Vamos"
        android:textAlignment="center"
        android:textColor="@color/verdeOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/jugamosBtn"
        android:layout_width="309dp"
        android:layout_height="84dp"
        android:backgroundTint="@color/verdePastel"
        android:fontFamily="@font/verdana"
        android:text="@string/Juego"
        android:textAlignment="center"
        android:textColor="@color/verdeOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/Bienvenida"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:fontFamily="@font/verdana"
        android:text="@string/Bienvenido"
        android:textAlignment="center"
        android:textColor="@color/azulcielo"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_height="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bienvenida"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/ojo" />


</androidx.constraintlayout.widget.ConstraintLayout>



